tests/error/impl_missing_func/main.adept

pragma => adept("3.0")

#[foreign]
func printf(format ptr<char>, ...) int

func main {
    speakInt::speak(10)
}

trait Speak<$T> {
    func speak(self $T) void
}

#[public]
impl Speak<int> speakInt {
}

